manifests/wikijs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
        - name: wikijs
          image: ghcr.io/requarks/wiki:2.5
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /wiki/config.yml
              subPath: config.yml
            - name: wiki-assets
              mountPath: /wiki-assets
      volumes:
        - name: config
          configMap:
            name: wikijs-config
        - name: wiki-assets
          nfs:
            server: 10.0.0.5
            path: /mnt/data/wiki-assets
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wikijs
spec:
  selector:
    app: wikijs
  ports:
    - port: 80
      targetPort: 3000
