manifests/wikijs/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wikijs-redirect-https
  namespace: wikijs
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wikijs
  namespace: wikijs
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wiki.smeyer.ca`)
      kind: Rule
      services:
        - name: wikijs
          port: 80
  tls:
    secretName: wildcard-smeyer-ca-tls 
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wikijs-http
  namespace: wikijs
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`wiki.smeyer.ca`)
      kind: Rule
      middlewares:
        - name: wikijs-redirect-https
      services:
        - name: wikijs
          port: 80
